* Changed static factory access to injection * Broke circular dependencies * Fixed test cases * Removed non-spring fallbacks